--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <h1 class="hero-title">
             Effective Solutions for Your Business
           </h1>
-          <button class="hero-btn" type="button">Order Service</button>
+          <button class="hero-btn btn" type="button">Order Service</button>
         </div>
       </section>
       <!-- #endregion -->
@@ -464,42 +464,47 @@
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="name-wrap">
-            <label class="name-label">Name
-              <div class="name-input-wrap">
-                <svg width="18" height="24">
-                  <use class="name-icon" href="./images/icons.svg#icon-person"></use>
+          <div class="label-wrap">
+            <label class="modal-label">Name
+              <div class="input-wrap">
+                 <input class="modal-input" type="text" name="username">
+                <svg class="modal-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person"></use>
                 </svg>
-                <input type="text" name="username">
               </div>
             </label>
           </div>
 
-          <div class="phone-wrap">
-            <label class="phone-label">Phone
-              <div class="phone-input-wrap">
-                <svg width="18" height="24">
-                  <use class="phone-icon" href="./images/icons.svg#icon-phone"></use>
+          <div class="label-wrap">
+            <label class="modal-label">Phone
+              <div class="input-wrap">
+                <input class="modal-input" type="tel" name="usertel">
+                <svg class="modal-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
-                <input type="tel" name="usertel">
               </div>
             </label>
           </div>
 
-          <div class="email-wrap">
-            <label class="email-label">Email
-              <div class="email-input-wrap">
-                <svg width="18" height="24">
-                  <use class="email-icon" href="./images/icons.svg#icon-email"></use>
+          <div class="label-wrap">
+            <label class="modal-label">Email
+              <div class="input-wrap">
+                 <input class="modal-input" type="email" name="useremail">
+                <svg class="modal-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
                 </svg>
-                <input type="email" name="useremail">
+              </label>
               </div>
+
               <div class="comment-wrap">
                 <label class="comment-label">Comment
-                  <textarea name="comment" placeholder="Text input"></textarea>
+                  <div class="textarea-wrap">
+                  <textarea class="textarea" name="comment" rows="7" placeholder="Text input"></textarea>
+                  </div>
                 </label>
               </div>
-            </label>
+
+            <button class="btn modal-btn" type="submit">Send</button>
           </div>
         </form>
       </div>
