--- a/index.html
+++ b/index.html
@@ -412,16 +412,16 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="logo-footer-container">
-      <a class="logo logo-footer" href="./index.html"
-        ><span class="logo-part">Web</span>Studio</a
-      >
-      <p class="footer-text">
+        <a class="logo logo-footer" href="./index.html"
+        ><span class="logo-part">Web</span>Studio</a>
+        <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
-      </p>
-      </div>
-      <div class="soc-footer-container">
-        <p class="soc-title">Social media</p>
+        </p>
+        </div>
+
+        <div class="soc-footer-container">
+        <p class="footer-title">Social media</p>
         <ul class="soc-list footer-list">
           <li class="soc-item">
             <a class="soc-link footer-link" href="">
@@ -453,9 +453,27 @@
           </li>
         </ul>
         </div>
+
+      <div class="form-footer-container">
+        <p class="footer-title">Subscribe</p>
+        <div class="form-footer-wrap">
+          <form class="form-footer">
+          <label for="userEmail"></label>
+          <input class="footer-email" id="userEmail" type="email" name="userEmail" placeholder="E-mail">
+          <button class="btn footer-btn" type="submit">Subscribe
+          <svg class="subscribe-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-subscribe"></use>
+          </svg>
+          </button>
+          </form>
+          </div>
       </div>
+
+      </div>
+
     </footer>
-    <div class="backdrop is-open">
+    
+    <div class="backdrop">
       <div class="modal">
         <button class="close-button" type="button">
           <svg class="modal-close" width="8" height="8">
@@ -463,48 +481,60 @@
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
+       
         <form class="modal-form">
+
           <div class="label-wrap">
-            <label class="modal-label">Name
-              <div class="input-wrap">
-                 <input class="modal-input" type="text" name="username">
-                <svg class="modal-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="modal-label" for="username">Name</label>
+            <div class="input-wrap">
+              <input id="username" class="modal-input" type="text" name="username">
+              <svg class="modal-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
 
           <div class="label-wrap">
-            <label class="modal-label">Phone
-              <div class="input-wrap">
-                <input class="modal-input" type="tel" name="usertel">
-                <svg class="modal-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="modal-label" for="userphone">Phone</label>
+            <div class="input-wrap">
+              <input id="userphone" class="modal-input" type="tel" name="userphone">
+              <svg class="modal-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
 
           <div class="label-wrap">
-            <label class="modal-label">Email
-              <div class="input-wrap">
-                 <input class="modal-input" type="email" name="useremail">
-                <svg class="modal-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </label>
-              </div>
+            <label class="modal-label" for="email">Email</label>
+            <div class="input-wrap">
+              <input id="email" class="modal-input" type="email" name="useremail">
+              <svg class="modal-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
 
-              <div class="comment-wrap">
-                <label class="comment-label">Comment
+              <div class="label-wrap">
+                <label class="modal-label" for="comment">Comment</label>
                   <div class="textarea-wrap">
-                  <textarea class="textarea" name="comment" rows="7" placeholder="Text input"></textarea>
+                  <textarea class="textarea" id="comment" name="comment" rows="7" placeholder="Text input"></textarea>
                   </div>
-                </label>
               </div>
 
-            <button class="btn modal-btn" type="submit">Send</button>
+              <label class="modal-agreement">
+                <input class="checkbox visually-hidden" type="checkbox" name="useagreement" id="useagreement" value="true"
+                >
+                <span class="agreement-span">
+                  <svg class="agreement-icon" width="10"
+                  height="8">
+                    <use href="./images/icons.svg#icon-checkbox"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
+                <a class="link-agreement" href="#">Privacy Policy</a>
+              </label>
+
+            <button class="btn modal-btn" type="submit">Send </button>
           </div>
         </form>
       </div>
