--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
     </footer>
     
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-button" type="button">
           <svg class="modal-close" width="8" height="8">
@@ -535,7 +535,6 @@
               </label>
 
             <button class="btn modal-btn" type="submit">Send </button>
-          </div>
         </form>
       </div>
     </div>
