--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
     </footer>
     
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-button" type="button">
           <svg class="modal-close" width="8" height="8">
