--- a/index.html
+++ b/index.html
@@ -458,8 +458,7 @@
         <p class="footer-title">Subscribe</p>
         <div class="form-footer-wrap">
           <form class="form-footer">
-          <label for="userEmail"></label>
-          <input class="footer-email" id="userEmail" type="email" name="userEmail" placeholder="E-mail">
+          <input class="footer-email" type="email" name="useremail" placeholder="E-mail">
           <button class="btn footer-btn" type="submit">Subscribe
           <svg class="subscribe-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-subscribe"></use>
