--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
     </footer>
     
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-button" type="button">
           <svg class="modal-close" width="8" height="8">
